# Desafio_Two_UdeA

./: README.md
Desafio_Two_UdeA/: CMakeLists.txt  bombos.csv  bombos.h  bombos.qrc  main.cpp
desafio_two/: Partido.h  bombos.h  clases.h  desafio_two.pro  eliminatorias.h  fase_grupos.h  funciones_auxiliares.h  main.cpp  math.h  memoria.h  simulacion.h
